@startuml ViwesUML
package Views {
    package Map {
        class "MapScreen" {
            +MapViewModel* mapViewModel
            +ChatViewModel* chatViewModel
            +GoogleMapController* controller
            -Future<void>* _goToPlace()
        }
        "MapScreen" o-- "MapViewModel"
        "MapScreen" o-- "ChatViewModel"
        "MapScreen" o-- "google_maps_flutter::GoogleMapController"
    }

    package Report {
        class "CreateReportScreen" {
            +BaseUserViewModel* baseUserViewModel
            +ReportViewModel* reportViewModel
            -dynamic _onReportSubmitted()
            -dynamic _onReportError()
        }
        "CreateReportScreen" o-- "BaseUserViewModel"
        "CreateReportScreen" o-- "ReportViewModel"

        class "ReportListScreen" {
            +ReportViewModel* reportViewModel
            +Widget* buildItem()
            +void scrollListener()
            -dynamic _onReportPressed()
        }
        "ReportListScreen" o-- "ReportViewModel"
    }
}
@enduml